<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/hotregions"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button_regions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/nextitem_bg_selector"
        android:gravity="left|center_vertical"
        android:text="@string/allregions"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/hotcategories"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button_categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/nextitem_bg_selector"
        android:gravity="left|center_vertical"
        android:text="@string/allchannel"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_search"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/search_big_selector" />
    </LinearLayout>

</LinearLayout>